<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            app:elevation="0dp"
            android:background="@color/white"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="0dp"
                android:background="@color/white"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_24"
                app:title="@string/menu"
                app:titleTextColor="@color/black" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                style="@style/TabItemStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                app:tabMode="scrollable">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:text="@string/cart"
                    android:layout_height="wrap_content">

                </com.google.android.material.tabs.TabItem>

                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:text="@string/order"
                    android:layout_height="wrap_content">

                </com.google.android.material.tabs.TabItem>

                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:text="@string/information"
                    android:layout_height="wrap_content">

                </com.google.android.material.tabs.TabItem>

            </com.google.android.material.tabs.TabLayout>

        </com.google.android.material.appbar.AppBarLayout>


        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCarts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:paddingTop="10dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_cart" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>